--- a/src/components/MainProducts/styles.css
+++ b/src/components/MainProducts/styles.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+    align-items: center;
+    width: 100vw;
 }
 
 .noElementWarning{
@@ -16,6 +18,7 @@
     .productsWrapper{
         margin-left: 260px;
         margin-top: 5em;
+        min-height: 70vh;
     }
 }
 @media all and (min-width:1000px){
