--- a/src/components/Product/styles.css
+++ b/src/components/Product/styles.css
@@ -8,7 +8,6 @@
 .product{
     margin: 20px 0;
     border-radius: 2em;
-    /* box-shadow: 10px 10px 15px 0px var(--bgColor); */
     width: 90%;
     max-height: 350px;
     background-color: white;
@@ -28,5 +27,11 @@
     .product{
         max-width: 200px;
         width: 100%;
+    }
+}
+
+@media all and (min-width:1000px){
+    .product{
+        margin: 10px;
     }
 }
