--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -13,6 +13,7 @@ header input{
     padding: 0.8em;
     border: none;
     border-radius: 0.5em 0 0 0.5em;
+    width: 150px;
 }
 
 header button{
@@ -26,7 +27,7 @@ header button{
 }
 
 header form{
-    margin: 0 auto;
+    /* max-width: 70%; */
 }
 
 .logo-wrap img{
@@ -42,6 +43,22 @@ header form{
     margin: 0;
 }
 
+.iconsWrapper{
+    position: fixed;
+    bottom: 0;
+    background-color: var(--bgColor);
+    width: 100vw;
+    text-align: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+}
+
+.icons{
+    margin: 10px;
+    font-size: 2em;
+}
 
 @media all and (min-width:700px){
     header{
