--- a/src/components/Footer/styles.css
+++ b/src/components/Footer/styles.css
@@ -5,5 +5,11 @@ footer{
     text-align: center;
     font-family: var(--titlesFont);
     width: 100vw;
-    margin-top: 40px;
+    margin: 80px 0;
+}
+
+@media (min-width:700px){
+    footer{
+        margin: 40px 0 0 0;
+    }
 }
