--- a/src/components/Product/styles.css
+++ b/src/components/Product/styles.css
@@ -10,9 +10,9 @@
     border-radius: 2em;
     width: 90%;
     background-color: white;
-    z-index: -1;
     max-height: 450px;
     position: relative;
+    z-index: 0;
 }
 
 .product button{
@@ -26,6 +26,7 @@
     position: absolute;
     bottom: -40px;
     line-height: 20px;
+    cursor: pointer;
 }
 
 
